// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Shared Components/Table Default 1`] = `
<div
  style={
    Object {
      "backgroundColor": "#000",
      "minHeight": "100vh",
    }
  }
>
  <div
    className="sc-VigVT imEBlk"
  >
    <table
      className="sc-jTzLTM UCMMg"
    >
      <tbody
        className="sc-jzJRlG enxKql"
      >
        <tr
          className="sc-cSHVUG iDabFA"
        >
          <td
            className="sc-kAzzGY ddrLpH"
          >
            US
          </td>
          <td
            className="sc-kAzzGY ddrLpH"
          >
            Washington, D.C.
          </td>
          <td
            className="sc-kAzzGY ddrLpH"
          >
            USA
          </td>
        </tr>
        <tr
          className="sc-cSHVUG iDabFA"
        >
          <td
            className="sc-kAzzGY ddrLpH"
          >
            PL
          </td>
          <td
            className="sc-kAzzGY ddrLpH"
          >
            Warsaw
          </td>
          <td
            className="sc-kAzzGY ddrLpH"
          >
            Poland
          </td>
        </tr>
        <tr
          className="sc-cSHVUG iDabFA"
        >
          <td
            className="sc-kAzzGY ddrLpH"
          >
            DE
          </td>
          <td
            className="sc-kAzzGY ddrLpH"
          >
            Berlin
          </td>
          <td
            className="sc-kAzzGY ddrLpH"
          >
            Germany
          </td>
        </tr>
        <tr
          className="sc-cSHVUG iDabFA"
        >
          <td
            className="sc-kAzzGY ddrLpH"
          >
            FR
          </td>
          <td
            className="sc-kAzzGY ddrLpH"
          >
            Paris
          </td>
          <td
            className="sc-kAzzGY ddrLpH"
          >
            France
          </td>
        </tr>
        <tr
          className="sc-cSHVUG iDabFA"
        >
          <td
            className="sc-kAzzGY ddrLpH"
          >
            ES
          </td>
          <td
            className="sc-kAzzGY ddrLpH"
          >
            Madird
          </td>
          <td
            className="sc-kAzzGY ddrLpH"
          >
            Spain
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`Storyshots Shared Components/Table with header 1`] = `
<div
  style={
    Object {
      "backgroundColor": "#000",
      "minHeight": "100vh",
    }
  }
>
  <div
    className="sc-VigVT imEBlk"
  >
    <table
      className="sc-jTzLTM UCMMg"
    >
      <thead
        className="sc-fjdhpX nsimD"
      >
        <tr
          className="sc-cSHVUG iDabFA"
        >
          <th
            className="sc-chPdSV cOTTIR"
          >
            Code
          </th>
          <th
            className="sc-chPdSV cOTTIR"
          >
            Capital
          </th>
          <th
            className="sc-chPdSV cOTTIR"
          >
            Country
          </th>
        </tr>
      </thead>
      <tbody
        className="sc-jzJRlG enxKql"
      >
        <tr
          className="sc-cSHVUG iDabFA"
        >
          <td
            className="sc-kAzzGY ddrLpH"
          >
            US
          </td>
          <td
            className="sc-kAzzGY ddrLpH"
          >
            Washington, D.C.
          </td>
          <td
            className="sc-kAzzGY ddrLpH"
          >
            USA
          </td>
        </tr>
        <tr
          className="sc-cSHVUG iDabFA"
        >
          <td
            className="sc-kAzzGY ddrLpH"
          >
            PL
          </td>
          <td
            className="sc-kAzzGY ddrLpH"
          >
            Warsaw
          </td>
          <td
            className="sc-kAzzGY ddrLpH"
          >
            Poland
          </td>
        </tr>
        <tr
          className="sc-cSHVUG iDabFA"
        >
          <td
            className="sc-kAzzGY ddrLpH"
          >
            DE
          </td>
          <td
            className="sc-kAzzGY ddrLpH"
          >
            Berlin
          </td>
          <td
            className="sc-kAzzGY ddrLpH"
          >
            Germany
          </td>
        </tr>
        <tr
          className="sc-cSHVUG iDabFA"
        >
          <td
            className="sc-kAzzGY ddrLpH"
          >
            FR
          </td>
          <td
            className="sc-kAzzGY ddrLpH"
          >
            Paris
          </td>
          <td
            className="sc-kAzzGY ddrLpH"
          >
            France
          </td>
        </tr>
        <tr
          className="sc-cSHVUG iDabFA"
        >
          <td
            className="sc-kAzzGY ddrLpH"
          >
            ES
          </td>
          <td
            className="sc-kAzzGY ddrLpH"
          >
            Madird
          </td>
          <td
            className="sc-kAzzGY ddrLpH"
          >
            Spain
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`Storyshots Shared Components/Table with numbered rows 1`] = `
<div
  style={
    Object {
      "backgroundColor": "#000",
      "minHeight": "100vh",
    }
  }
>
  <div
    className="sc-VigVT imEBlk"
  >
    <table
      className="sc-jTzLTM UCMMg"
    >
      <thead
        className="sc-fjdhpX nsimD"
      >
        <tr
          className="sc-cSHVUG iDabFA"
        >
          <th
            className="sc-chPdSV cOTTIR"
          >
            #
          </th>
          <th
            className="sc-chPdSV cOTTIR"
          >
            Code
          </th>
          <th
            className="sc-chPdSV cOTTIR"
          >
            Capital
          </th>
          <th
            className="sc-chPdSV cOTTIR"
          >
            Country
          </th>
        </tr>
      </thead>
      <tbody
        className="sc-jzJRlG enxKql"
      >
        <tr
          className="sc-cSHVUG iDabFA"
        >
          <td
            className="sc-kgoBCf iJhCFb"
          >
            1
          </td>
          <td
            className="sc-kAzzGY ddrLpH"
          >
            US
          </td>
          <td
            className="sc-kAzzGY ddrLpH"
          >
            Washington, D.C.
          </td>
          <td
            className="sc-kAzzGY ddrLpH"
          >
            USA
          </td>
        </tr>
        <tr
          className="sc-cSHVUG iDabFA"
        >
          <td
            className="sc-kgoBCf iJhCFb"
          >
            2
          </td>
          <td
            className="sc-kAzzGY ddrLpH"
          >
            PL
          </td>
          <td
            className="sc-kAzzGY ddrLpH"
          >
            Warsaw
          </td>
          <td
            className="sc-kAzzGY ddrLpH"
          >
            Poland
          </td>
        </tr>
        <tr
          className="sc-cSHVUG iDabFA"
        >
          <td
            className="sc-kgoBCf iJhCFb"
          >
            3
          </td>
          <td
            className="sc-kAzzGY ddrLpH"
          >
            DE
          </td>
          <td
            className="sc-kAzzGY ddrLpH"
          >
            Berlin
          </td>
          <td
            className="sc-kAzzGY ddrLpH"
          >
            Germany
          </td>
        </tr>
        <tr
          className="sc-cSHVUG iDabFA"
        >
          <td
            className="sc-kgoBCf iJhCFb"
          >
            4
          </td>
          <td
            className="sc-kAzzGY ddrLpH"
          >
            FR
          </td>
          <td
            className="sc-kAzzGY ddrLpH"
          >
            Paris
          </td>
          <td
            className="sc-kAzzGY ddrLpH"
          >
            France
          </td>
        </tr>
        <tr
          className="sc-cSHVUG iDabFA"
        >
          <td
            className="sc-kgoBCf iJhCFb"
          >
            5
          </td>
          <td
            className="sc-kAzzGY ddrLpH"
          >
            ES
          </td>
          <td
            className="sc-kAzzGY ddrLpH"
          >
            Madird
          </td>
          <td
            className="sc-kAzzGY ddrLpH"
          >
            Spain
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;
